# esp_audio_test

./: .gitignore  CMakeLists.txt  README.md  audio_pt.csv  sdkconfig
components/custom_audio_board/: CMakeLists.txt  board.c  board.h  board_pins_config.c  component.mk
components/custom_codec/: CMakeLists.txt  new_codec.c
main/: CMakeLists.txt  audio_main.cpp
